RESOLVED FIXED24158
DumpRenderTree for Qt port does not implement queue methods nor does it implement dumpBackForwardList
https://bugs.webkit.org/show_bug.cgi?id=24158
Summary DumpRenderTree for Qt port does not implement queue methods nor does it imple...
Adam Treat
Reported 2009-02-25 05:34:08 PST
Hi, Currently the Qt port does not implement queue methods nor does it implement dumpBackForwardList. The forthcoming patch resolves this and thereby gets 2% more tests passing as well as a number of tests from the current Qt Skipped file.
Attachments
Implements missing DRT methods for Qt port (24.19 KB, patch)
2009-02-25 05:34 PST, Adam Treat
zack: review+
Adam Treat
Comment 1 2009-02-25 05:34:56 PST
Created attachment 27964 [details] Implements missing DRT methods for Qt port
Adam Treat
Comment 2 2009-02-25 06:18:16 PST
Fixed with r41211.
Note You need to log in before you can comment on or make changes to this bug.